chore: ver bump for 26.1.2 + java 25, with critical bug fixes inc.