@@ -1,5 +1,6 @@
 package me.teakivy.teakstweaks.utils;
 
+import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import org.bukkit.Bukkit;
@@ -10,80 +11,64 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.SkullMeta;
 import org.bukkit.profile.PlayerProfile;
 import org.bukkit.profile.PlayerTextures;
-import org.json.simple.JSONArray;
-import org.json.simple.JSONObject;
-import org.json.simple.parser.JSONParser;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 import java.util.Base64;
-import java.util.HashMap;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 
 public class UUIDUtils {
-    private static final HashMap<String, UUID> uuidCache = new HashMap<>();
+    private static final ConcurrentHashMap<String, UUID> uuidCache = new ConcurrentHashMap<>();
+    private static final HttpClient HTTP = HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(10))
+            .build();
 
     public static CompletableFuture<UUID> getUUIDAsync(String name) {
-        // Check cache first
-        if (uuidCache.containsKey(name)) {
-            return CompletableFuture.completedFuture(uuidCache.get(name));
+        UUID cached = uuidCache.get(name);
+        if (cached != null) {
+            return CompletableFuture.completedFuture(cached);
         }
 
-        // Run async task
         return CompletableFuture.supplyAsync(() -> {
-            String uuid = "";
             try {
-                BufferedReader in = new BufferedReader(new InputStreamReader(new URL("https://api.mojang.com/users/profiles/minecraft/" + name).openStream()));
-                uuid = (((JsonObject)new JsonParser().parse(in)).get("id")).toString().replaceAll("\"", "");
-                uuid = uuid.replaceAll("(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})", "$1-$2-$3-$4-$5");
-                in.close();
+                HttpRequest request = HttpRequest.newBuilder()
+                        .uri(URI.create("https://api.mojang.com/users/profiles/minecraft/" + name))
+                        .GET()
+                        .build();
+                HttpResponse<String> response = HTTP.send(request, HttpResponse.BodyHandlers.ofString());
+                JsonObject json = JsonParser.parseString(response.body()).getAsJsonObject();
+                String raw = json.get("id").getAsString();
+                String dashed = raw.replaceAll("(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})", "$1-$2-$3-$4-$5");
+                UUID parsed = UUID.fromString(dashed);
+                uuidCache.put(name, parsed);
+                return parsed;
             } catch (Exception e) {
-                uuid = "er";
+                throw new RuntimeException("Failed to resolve UUID for " + name, e);
             }
-            UUID Uuid = UUID.fromString(uuid);
-            uuidCache.put(name, Uuid);
-            return Uuid;
         });
     }
 
     public static String getPlayerTexture(UUID uuid) {
-        String urlString = "https://sessionserver.mojang.com/session/minecraft/profile/" + uuid.toString();
-        StringBuilder result = new StringBuilder();
-
         try {
-            // Create a URL object
-            URL url = new URL(urlString);
-
-            // Open a connection to the URL
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
-
-            // Read the response
-            BufferedReader rd = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-            String line;
-            while ((line = rd.readLine()) != null) {
-                result.append(line);
-            }
-            rd.close();
-
-            // Parse the JSON response using json-simple
-            JSONParser parser = new JSONParser();
-            JSONObject jsonResponse = (JSONObject) parser.parse(result.toString());
-            JSONArray propertiesArray = (JSONArray) jsonResponse.get("properties");
-            JSONObject firstProperty = (JSONObject) propertiesArray.get(0); // fix for first element
-
-            // Extract the value
-            return (String) firstProperty.get("value");
-
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("https://sessionserver.mojang.com/session/minecraft/profile/" + uuid))
+                    .GET()
+                    .build();
+            HttpResponse<String> response = HTTP.send(request, HttpResponse.BodyHandlers.ofString());
+            JsonObject json = JsonParser.parseString(response.body()).getAsJsonObject();
+            JsonArray properties = json.getAsJsonArray("properties");
+            return properties.get(0).getAsJsonObject().get("value").getAsString();
         } catch (Exception e) {
             e.printStackTrace();
+            return null;
         }
-
-        return null;
     }
 
     public static CompletableFuture<ItemStack> getPlayerHead(String name) {
